<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">
    <EditText
        android:id="@+id/urlInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:hint="@string/enter_url"
        android:text="@string/defaultURL"/>

    <Button
        android:id="@+id/downloadTrackBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"/>

    <Button
        android:id="@+id/checkTrackBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"/>

    <Button
        android:id="@+id/cancelTrackBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

    </LinearLayout>

