<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/login_ripple_effect"
    style="@style/Widget.AppCompat.Button">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:textStyle="bold"
        android:textSize="32dp"
        android:textColor="@color/colorBackground"
        android:padding="48dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="please sign in to continue"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="@color/colorBackground"
        android:padding="16dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/main_googlesigninbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:buttonSize="wide" />

</LinearLayout>

